# forensic-reconstruction

./: .gitignore  COMPLETE_TEST_REPORT.md  DEPLOYMENT.md  FLOWCHART.md  HOW_TO_RUN.txt  QUICKSTART.md  README.md  generate_report.py  render.yaml  setup.ps1  start_backend.bat  start_frontend.bat  test_measurements.py  test_reconstruction.py  test_report.py  test_summary.py  upload_test.py
backend/: .gitignore  config.py  create_photogrammetry_dataset.py  create_test_images.py  demo_server.py  demo_server_full.py  main.py  models.py  pyproject.toml  requirements-deploy.txt  requirements.txt  verify_backend.py
backend/database/: __init__.py
backend/models/: orthomosaic_1.tif
backend/photogrammetry_test_images/: dataset_info.json
backend/routes/: images.py  measurements.py  projects.py  reconstruction.py  reports.py
backend/services/: chain_of_custody.py  forensic_validator.py  geospatial.py  image_processor.py  measurement.py  photogrammetry.py  reconstruction_3d.py  report_generator.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Header.tsx  ImageUploadPanel.tsx  MapView.tsx  MeasurementsPanel.tsx  ModelViewer.tsx  ReportPanel.tsx
frontend/src/pages/: ProjectDetailPage.tsx  ProjectsPage.tsx
