[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic-antigravity-backend"
version = "1.0.0"
description = "Forensic Crime Scene Reconstruction Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "opencv-python-headless>=4.9.0.80",
    "Pillow>=10.2.0",
    "piexif>=1.1.3",
    "imageio>=2.33.1",
    "numpy>=1.24.3",
    "scipy>=1.11.4",
    "geopy>=2.4.1",
    "pyproj>=3.6.1",
    "folium>=0.15.1",
    "reportlab>=4.0.8",
    "matplotlib>=3.8.2",
    "pandas>=2.1.4",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "cryptography>=41.0.7",
    "python-dateutil>=2.8.2",
    "aiofiles>=23.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
]
